# AITOMATIC-Test

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: data.json  train.jsonl
notebooks/: data_generation.ipynb  train.jsonl  train_log.json
scripts/: pdf_extractor.py
src/: app.py  config.py  data_generation.py  finetuning.py  openai_api.py  pdf_extractor.py  utils.py
src/tests/: test_app.py
